[package]
name = "blockchain-nodes-builder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "docker-build"
path = "docker-build.rs"

[[bin]]
name = "containerctl"
path = "containerctl.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
clap = { version = "4.5", features = ["derive"] }
owo-colors = { version = "4.1", features = ["supports-colors"] }
